chore: add gemini debug logging

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ GEMINI_VAD_START_SENSITIVITY=START_SENSITIVITY_LOW
 GEMINI_VAD_END_SENSITIVITY=END_SENSITIVITY_LOW
 GEMINI_VAD_PREFIX_PADDING_MS=20
 GEMINI_VAD_SILENCE_DURATION_MS=100
+# Debug logging for Gemini bridge (app server).
+DEBUG_GEMINI=0
 GEMINI_AUDIO_VIA_LIVEKIT=1
 GEMINI_LOCAL_PLAYBACK=1
 LIVEKIT_API_KEY=devkey
@@ -13,5 +15,7 @@ LIVEKIT_URL=ws://localhost:8780
 APP_PORT=3300
 ENABLE_GEMINI_BRIDGE=1
 ENABLE_DEBUG_TRANSCRIPT=0
+# Debug logging in SPA (Gemini UI).
+VITE_DEBUG_GEMINI=0
 VITE_APP_BASE_URL=http://localhost:3300
 CORS_ORIGIN=http://localhost:5173
